[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prefabs/dynamite.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/InheritedScenes/dynamite.tscn" type="PackedScene" id=2]

[sub_resource type="ParticlesMaterial" id=1]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = false
spread = 75.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.5
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 10.0
damping_random = 1.0
angle = 0.0
angle_random = 0.0
scale = 1.5
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Damping", "Gravity", "Initial Velocity", "Scale", "Spread", "Trail" ]

[sub_resource type="SpatialMaterial" id=2]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 0.535553, 0.332031, 1 )
metallic = 0.0
metallic_specular = 1.0
metallic_texture_channel = 0
roughness = 1.0
roughness_texture_channel = 0
emission_enabled = true
emission = Color( 1, 0.533333, 0.329412, 1 )
emission_energy = 5.0
emission_operator = 0
emission_on_uv2 = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Emission", "Metallic", "Roughness" ]

[sub_resource type="SphereMesh" id=3]

material = SubResource( 2 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
radius = 0.005
height = 0.01
radial_segments = 4
rings = 2
is_hemisphere = false

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1, 1, 1 )

[node name="dynamite" type="Spatial"]

script = ExtResource( 1 )

[node name="dynamite" parent="." index="0" instance=ExtResource( 2 )]

[node name="BangTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 7.0
one_shot = true
autostart = true

[node name="Particles" type="Particles" parent="." index="2"]

transform = Transform( -0.898589, 0, -0.438791, 0, 1, 0, 0.438791, 0, -0.898589, -0.301465, 0.321816, -0.54872 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
emitting = true
amount = 50
lifetime = 0.25
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_aabb = AABB( -0.05, -0.05, -0.05, 0.1, 0.1, 0.1 )
local_coords = false
draw_order = 0
process_material = SubResource( 1 )
draw_passes = 1
draw_pass_1 = SubResource( 3 )
_sections_unfolded = [ "Draw Passes", "Drawing", "Process Material", "Time", "Transform" ]

[node name="dynamite_area" type="Area" parent="." index="3"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="dynamite_area" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0 )
shape = SubResource( 4 )
disabled = false
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="BangTimer" to="." method="_on_BangTimer_timeout"]

[connection signal="area_entered" from="dynamite_area" to="." method="_on_dynamite_area_area_entered"]

[connection signal="body_entered" from="dynamite_area" to="." method="_on_dynamite_area_body_entered"]


